update sign-up page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="links-position">
           <a href="#">Sign in</a>
           <span class="line"></span>
-          <a href="#">Sign up</a>
+          <a href="sign-up.html">Sign up</a>
         </div>
       </div>
       <!-- Header above section ends -->
