--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="images/logo.png" alt="logo" />
 
         <div class="links-position">
-          <a href="#">Sign in</a>
+          <a href="sign-in.html">Sign in</a>
           <span class="line"></span>
           <a href="sign-up.html">Sign up</a>
         </div>
