--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <label for="date">Date</label>
         <input id="date" type="date">
         
-        <button>Submit</button>
+        <button>Verify</button>
 
         <label for="result" class="result">Result</label>
         <input id="result" type="text" placeholder="Registered on" disabled>
