update input fields

--- a/add-info.html
+++ b/add-info.html
@@ -69,6 +69,9 @@
         
         <label for="cnic">Cnic No</label>
         <input id="number" type="number" placeholder="XXXX-XXXXXX-X">
+
+        <label for="date">Date</label>
+        <input id="date" type="date">
         
         <button>Submit</button>
         </form>
