--- a/add-info.html
+++ b/add-info.html
@@ -17,7 +17,7 @@
       <!-- Navigation starts -->
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#add">Add Details</a></li>
           <li><a href="#verify">Verification</a></li>
@@ -34,17 +34,28 @@
     <!-- Banner Section Ends -->
     <!-- Message Section Starts -->
     <section class="message-section-spacing">
-      <h1>Message By Father of Nation</h1>
+      <h1>Message By Parents of Nation</h1>
       <div class="message-section">
         <div>
           <img src="images/quaid.jpeg" alt="quaid" />
-        </div>
         <p class="message-text">
           "Come forward as servants of Islam,organize the people
           economically,socially,educationally and politically and I am sure that
           you will be a power that will be accepted by everybody."
+          <pre><b>
+            -  Mohammad Ali Jinnah</b></pre>
         </p>
-        <span><b> - Muhammad Ali Jinnah</b></span>
+      </div>
+      <div>
+        <img src="images/fatima.jpg" alt="fatima" />
+      <p class="message-text">
+        "There is a magic power in your own hands. Take your vital decisions-they may be grave 
+        and momentous and far-reaching in their consequences. Think a hundred times before you take any decision,
+         but once a decision is taken, stand by it as one man."
+        <pre><b>
+          -  Fatima Jinnah</b></pre>
+      </p>
+      </div>
       </div>
     </section>
     <!-- Message Section Ends -->
