--- a/add-info.html
+++ b/add-info.html
@@ -82,7 +82,7 @@
       <input id="cnic" type="number" placeholder="XXXXX-XXXXXX-X">
         
         
-        <button Submit onclick=$query = "INSERT INTO `pakrashan` (`First_Name`, `Middle_Name`, `Last_Name`, `CNIC`, `Date`, `Org_Donor`) VALUES ('Nabeel2', 'Test2', 'Aziz2', '12345678901235', '2020-04-03', 'TEST ENTRY2');`;";</button>
+        <button Submit onclick=$sql = "INSERT INTO `pakrashan` (`First_Name`, `Middle_Name`, `Last_Name`, `CNIC`, `Date`, `Org_Donor`) VALUES ('Nabeel2', 'Test2', 'Aziz2', '12345678901235', '2020-04-03', 'TEST ENTRY2');`;";</button>
 
 
         </form>
