test for .cpanel.yml
i will revert anything i do here

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           economically,socially,educationally and politically and I am sure that
           you will be a power that will be accepted by everybody."
           <pre><b>
-            -  Mohammad Ali Jinnah</b></pre>
+            -  Mohammad Ali Jinna</b></pre>
         </p>
       </div>
       <div>
