--- a/add-info.html
+++ b/add-info.html
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
-<?php
-    $db = mysqli_connect('localhost:3306 ','pakrashan_admin','Fretab@23','pakrashan_rashan');
-?>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -82,7 +79,7 @@
       <input id="cnic" type="number" placeholder="XXXXX-XXXXXX-X">
         
         
-        <button onclick=$sql = "INSERT INTO `pakrashan` (`First_Name`, `Middle_Name`, `Last_Name`, `CNIC`, `Date`, `Org_Donor`) VALUES ('Nabeel2', 'Test2', 'Aziz2', '12345678901235', '2020-04-03', 'TEST ENTRY2');`;";</button>
+        <button>Submit</button>
 
 
         </form>
