--- a/index.html
+++ b/index.html
@@ -68,7 +68,34 @@
         <input id="password" type="password" placeholder="Enter Password">
         
         
-        <button>Login</button>
+        <p>
+    <input type="submit" name="button" id="button" value="Login">
+  </p>
+</form>
+<?php
+if(isset($_POST['button']))
+{
+session_start();
+include('config.php');
+$username = $_POST['userName'];
+$pass = $_POST['password'];
+
+$en = md5($pass); 
+$query = mysql_query ("SELECT `User_Name`, `Password` FROM `users` WHERE User_Name = '$username' AND Password = '$en'");
+$count = mysql_num_rows($query);
+
+if($count >0)
+{
+$_SESSION['login_user'] = $username;
+header ("Location: add-info.html");
+}
+else
+{
+"Username or Password is invalid";
+
+}
+}
+?>
 
         </form>
     </section>
