--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 if(isset($_POST['button']))
 {
 session_start();
-include('config.php');
+include('config2.php');
 $username = $_POST['userName'];
 $pass = $_POST['password'];
 
