--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ header ("Location: add-info.html");
 }
 else
 {
-"Username or Password is invalid";
+<pre><b>Username or Password is invalid</b></pre>
 
 }
 }
