--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
         <input id="password" type="password" placeholder="Enter Password">
         
         
-        <p>
-    <input type="submit" name="button" id="button" value="Login">
-  </p>
+       <button>LOGIN</button>
 </form>
 <?php
 if(isset($_POST['button']))
