--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         <input id="password" type="password" placeholder="Enter Password">
         
         
-       <button>LOGIN</button>
+        <p>
+    <input type="login" name="button" id="button" value="LOGIN">
+  </p>
+       <!--- <button>LOGIN</button> -->
 </form>
         </form>
     </section>
