--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <div class="logo">
         <img src="images/logo.png" alt="logo" />
       </div>
+      <h3>CONTACT US:</h3>
+      <h4>SYED MEESUM ABIDI</h4>
+      <h5>CELL: +92 340-837-3311</h5>
       <!-- Header above section ends -->
       <!-- Navigation starts -->
       <nav>
